--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
       
     <div class="container">
-        <h1 class="bg-danger">Habib</h1>
+        <h1 class="bg-danger text-center text-white">Habib</h1>
     </div>
 </body>
 </html>
