--- a/bgc.html
+++ b/bgc.html
@@ -11,6 +11,10 @@
 <body>
     <div class="container">
         <h1 class="bg-primary">Habib</h1>
+          <h1 class="bg-secondary">Habib</h1>
+            <h1 class="bg-">Habib</h1>
+              <h1 class="bg-primary">Habib</h1>
+                <h1 class="bg-primary">Habib</h1>
     </div>
 </body>
 </html>
