--- a/bgc.html
+++ b/bgc.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="bg-primary">Habib</h1>
-          <h1 class="bg-secondary">Habib</h1>
-            <h1 class="bg-">Habib</h1>
-              <h1 class="bg-primary">Habib</h1>
+        <h1 class="bg-primary">bg-primary</h1>
+          <h1 class="bg-secondary">bg-secondary</h1>
+            <h1 class="bg-success">bg-success</h1>
+              <h1 class="bg-primary">H</h1>
                 <h1 class="bg-primary">Habib</h1>
     </div>
 </body>
