--- a/bgc.html
+++ b/bgc.html
@@ -13,8 +13,9 @@
         <h1 class="bg-primary">bg-primary</h1>
           <h1 class="bg-secondary">bg-secondary</h1>
             <h1 class="bg-success">bg-success</h1>
-              <h1 class="bg-primary">H</h1>
-                <h1 class="bg-primary">Habib</h1>
+              <h1 class="bg-danger">danger</h1>
+                <h1 class="bg-warning">Warning</h1>
+                  <h1 class="bg-info">info</h1>
     </div>
 </body>
 </html>
