--- a/bgc.html
+++ b/bgc.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="bg-primary">bg-primary</h1>
-          <h1 class="bg-secondary">bg-secondary</h1>
-            <h1 class="bg-success">bg-success</h1>
-              <h1 class="bg-danger">danger</h1>
-                <h1 class="bg-warning">Warning</h1>
-                  <h1 class="bg-info">info</h1>
+        <h1 class="bg-primary text-center">bg-primary</h1>
+          <h1 class="bg-secondary text-center">bg-secondary</h1>
+            <h1 class="bg-success text-center">bg-success</h1>
+              <h1 class="bg-danger text-center">danger</h1>
+                <h1 class="bg-warning text-center">Warning</h1>
+                  <h1 class="bg-info text-center">info</h1>
+                    <h1 class="bg-light text-center">light</h1>
+                      <h1 class="bg-dark text-white text-center">light</h1>
     </div>
 </body>
 </html>
