--- a/bgc.html
+++ b/bgc.html
@@ -18,6 +18,8 @@
                   <h1 class="bg-info text-center">info</h1>
                     <h1 class="bg-light text-center">light</h1>
                       <h1 class="bg-dark text-white text-center">light</h1>
+                       <h1 class="bg-white text-white text-center">White</h1>
+                      
     </div>
 </body>
 </html>
