--- a/border.html
+++ b/border.html
@@ -14,11 +14,13 @@
     </style>
 </head>
 <body>
-    <div class="border border-primary"></div>
+    <!-- <div class="border border-primary"></div>
     <div class="border"></div>
     <div class="border-top border-danger"></div>
     <div class="border-bottom border-info"></div>
     <div class="border-start border-dark"></div>
-    <div class="border-end border-warning"></div>
+    <div class="border-end border-warning"></div> -->
+
+    <div class="border border-warning"> </div>
 </body>
 </html>
