--- a/border.html
+++ b/border.html
@@ -21,6 +21,12 @@
     <div class="border-start border-dark"></div>
     <div class="border-end border-warning"></div> -->
 
-    <div class="border border-warning"> </div>
+    <!-- <div class="border border-warning"></div>
+    <div class="border border-warning"></div> -->
+    <div class="border-top border-1"></div>
+    <div class="border-buttom border-2"></div>
+    <div class="border-start border-3"></div>
+    <div class="border-end border-4"></div>
+    <div class="border border-5"></div>
 </body>
 </html>
