--- a/border-rounded.html
+++ b/border-rounded.html
@@ -23,7 +23,9 @@
     <div class="rounded"></div>
     <div class="rounded-top"></div>
     <div class="rounded-start"></div>
+    <div class="rounded-end"></div>
     <div class="rounded-bottom"></div>
-    <div class="rounded-bottom"></div>
+    <div class="rounded-circle"></div>
+    <div class="rounded-pill"></div>
 </body>
 </html>
