--- a/change-text-color.html
+++ b/change-text-color.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h2 class="text-primary bg-light">Text-primary</h2>
          <h2 class="text-secondary bg-dark">Text-secondary</h2>
+          <h2 class="text-warning bg-info">Text-warning</h2>
     </div>
 
 </body>
