--- a/pt-5.html
+++ b/pt-5.html
@@ -9,7 +9,12 @@
 </head>
 <body>
   
-<div class="container pt-3">
+<div class="container pt-3 bg-dark text-white text-center">
+  <h1>My First Bootstrap Page</h1>
+  <p>This container has an extra top padding.</p>
+  <p>Try to remove the .pt-5 class to see the difference.</p>
+</div>
+<div class="container pt-3 bg-info text-white text-center">
   <h1>My First Bootstrap Page</h1>
   <p>This container has an extra top padding.</p>
   <p>Try to remove the .pt-5 class to see the difference.</p>
