--- a/responsive-container.html
+++ b/responsive-container.html
@@ -16,7 +16,7 @@
 <div class="container-md mt-3 border bg-danger text-white">conatiner-md</div>
 <div class="container-lg mt-3 border bg-warning text-dark">container-lg</div>
 <div class="container-xl mt-3 bg-primary text-white border">container-xl</div>
-<div class="container-xxl mt-3 border">container-xxl</div>
+<div class="container-xxl mt-3 bg-white text-warning border">container-xxl</div>
     </div>
 </body>
 </html>
