--- a/highlight-text.html
+++ b/highlight-text.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container mt-3">
-        <p>She is my love and i love <mark>Ebru</mark> </p>
+        <p>She is my love and i love <kbd>Ebru</kbd> </p>
     </div>
     
 </body>
