--- a/highlight-text.html
+++ b/highlight-text.html
@@ -11,7 +11,10 @@
 <body>
 
     <div class="container mt-3">
-        <p>She is my love and i love <kbd>Ebru</kbd> </p>
+        <!-- <p>She is my love and i love <kbd>Ebru</kbd> </p> -->
+
+        <p class="text-black-50 bg-info">Black text with 50% opacity</p>
+        <p class="text-white-50 bg-dark">white text with 50% opacity</p>
     </div>
     
 </body>
