--- a/highlight-text.html
+++ b/highlight-text.html
@@ -15,6 +15,29 @@
 
         <p class="text-black-50 bg-info">Black text with 50% opacity</p>
         <p class="text-white-50 bg-dark">white text with 50% opacity</p>
+
+        <table class="table">
+            <thead class="">
+                <tr class="bg-warning">
+                    <th>First</th>
+                    <th>Scond</th>
+                    <th>Third</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>john</td>
+                    <td>doe</td>
+                    <td>john@gmailcom</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dolley</td>
+                    <td>july@gamil.com</td>
+                </tr>
+            </tbody>
+
+        </table>
     </div>
     
 </body>
