add table striped

--- a/highlight-text.html
+++ b/highlight-text.html
@@ -16,9 +16,9 @@
         <p class="text-black-50 bg-info">Black text with 50% opacity</p>
         <p class="text-white-50 bg-dark">white text with 50% opacity</p>
 
-        <table class="table">
+        <table class="table table-striped">
             <thead class="">
-                <tr class="bg-warning">
+                <tr class="">
                     <th>First</th>
                     <th>Scond</th>
                     <th>Third</th>
