add table hover

--- a/highlight-text.html
+++ b/highlight-text.html
@@ -16,7 +16,7 @@
         <p class="text-black-50 bg-info">Black text with 50% opacity</p>
         <p class="text-white-50 bg-dark">white text with 50% opacity</p>
 
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered table-hover">
             <thead class="">
                 <tr class="">
                     <th>First</th>
