--- a/highlight-text.html
+++ b/highlight-text.html
@@ -17,7 +17,7 @@
         <p class="text-white-50 bg-dark">white text with 50% opacity</p>
 
         <table class="table table-dark table-striped table-hover">
-            <thead class="">
+            <thead class="table-danger">
                 <tr class="">
                     <th>First</th>
                     <th>Scond</th>
