--- a/Responsive-table.html
+++ b/Responsive-table.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="table-respponsive">
+    <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
                 <tr>
