--- a/Image-shapes.html
+++ b/Image-shapes.html
@@ -11,9 +11,10 @@
 <body>
   
     <div class="container mt-3">
-  <h2>Rounded Corners</h2>
+  <h2>The Love of Happy</h2>
   <p>The .rounded class adds rounded corners to an image:</p>            
-  <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="rounded-circle" alt="Cinque Terre" width="304" height="236"> 
+  <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="img-thumbnail float-start" alt="Cinque Terre" width="304" height="236"> 
+  <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="img-thumbnail float-end" alt="Cinque Terre" width="304" height="236"> 
 </div>
     
 </body>
