--- a/Image-shapes.html
+++ b/Image-shapes.html
@@ -15,6 +15,8 @@
   <p>The .rounded class adds rounded corners to an image:</p>            
   <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="img-thumbnail float-start" alt="Cinque Terre" width="304" height="236"> 
   <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="img-thumbnail float-end" alt="Cinque Terre" width="304" height="236"> 
+
+  <img src="c:\Users\md.habibur rahman\Downloads\ChatGPT Image Jun 3, 2025, 12_36_23 PM.png" class="img-fluid" alt="Cinque Terre" width="1100" height="500"> 
 </div>
     
 </body>
