--- a/Alert.html
+++ b/Alert.html
@@ -15,7 +15,7 @@
             <strong>Success!</strong>This alert box could indicate a successful or positive action.
         </div>
 <div class="alert alert-info">
-    <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
+    <strong>Info!</strong> This alert box could indicate <a href="#" class="alert-link"> a neutral informative change or action.</a>
   </div>
   <div class="alert alert-warning">
     <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
