--- a/Alert.html
+++ b/Alert.html
@@ -11,27 +11,43 @@
 
     <div class="container mt-3">
         <h2>Alert</h2>
+        <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         <div class="alert alert-success ">
             <strong>Success!</strong>This alert box could indicate a successful or positive action.
         </div>
+        <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 <div class="alert alert-info">
     <strong>Info!</strong> This alert box could indicate <a href="#" class="alert-link"> a neutral informative change or action.</a>
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-warning">
     <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-danger">
     <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-primary">
     <strong>Primary!</strong> Indicates an important action.
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-secondary">
     <strong>Secondary!</strong> Indicates a slightly less important action.
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-dark">
     <strong>Dark!</strong> Dark grey alert.
   </div>
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
   <div class="alert alert-light">
     <strong>Light!</strong> Light grey alert.
   </div>
