--- a/Button-style.html
+++ b/Button-style.html
@@ -22,5 +22,12 @@
                 <button type="button" class="btn btn-light">Basic</button>
                  <button type="button" class="btn btn-link">Basic</button>
     </div>
+    <div class="container mt-3">
+        <h2>Button Elements</h2>
+        <a href="#" class="btn btn-success">Link Button</a>
+        <button type="button" class="btn btn-success">Button</button>
+        <input type="button" class="btn btn-warning" value="Input Button">
+        <input type="submit" class="btn btn-danger" value="Reaset Button">
+    </div>
 </body>
 </html>
