--- a/Button-style.html
+++ b/Button-style.html
@@ -29,5 +29,10 @@
         <input type="button" class="btn btn-warning" value="Input Button">
         <input type="submit" class="btn btn-danger" value="Reaset Button">
     </div>
+
+    <div class="container mt-3">
+        <h2>Button Outline</h2>
+        <button type="button" class="btn btn-"></button>
+    </div>
 </body>
 </html>
