--- a/Badges.html
+++ b/Badges.html
@@ -9,10 +9,21 @@
 
 </head>
 <body>
-    <div class="container mt-3">
+    <!-- <div class="container mt-3">
         <h2>Badges</h2>
         <h1>Example heading <span class="badge bg-secondary">New</span></h1>
         <h2>Example heading <span class="badge bg-secondary">New</span></h2>
-    </div>
+    </div> -->
+<div class="conatiner mt-3">
+    <h2>Contextual Bdges</h2>
+    <span class="badge bg-primary">Primary</span>
+        <span class="badge bg-secondary">Secondary</span>
+            <span class="badge bg-success">Success</span>
+                <span class="badge bg-danger">Danger</span>
+                    <span class="badge bg-warning">Warning</span>
+                        <span class="badge bg-info">Info</span>
+                            <span class="badge bg-dark">Dark</span>
+</div>
+
 </body>
 </html>
