--- a/Badges.html
+++ b/Badges.html
@@ -16,13 +16,13 @@
     </div> -->
 <div class="conatiner mt-3">
     <h2>Contextual Bdges</h2>
-    <span class="badge bg-primary">Primary</span>
-        <span class="badge bg-secondary">Secondary</span>
-            <span class="badge bg-success">Success</span>
-                <span class="badge bg-danger">Danger</span>
-                    <span class="badge bg-warning">Warning</span>
-                        <span class="badge bg-info">Info</span>
-                            <span class="badge bg-dark">Dark</span>
+    <span class="badge rounded-pill bg-primary">Primary</span>
+        <span class="badge rounded-pill bg-secondary">Secondary</span>
+            <span class="badge rounded-pill bg-success">Success</span>
+                <span class="badge rounded-pill bg-danger">Danger</span>
+                    <span class="badge rounded-pill bg-warning">Warning</span>
+                        <span class="badge rounded-pill bg-info">Info</span>
+                            <span class="badge rounded-pill bg-dark">Dark</span>
 </div>
 
 </body>
