--- a/Progress-bar-height.html
+++ b/Progress-bar-height.html
@@ -11,15 +11,15 @@
     <div class="container mt-3">
         <h2>Progress Bar Height</h2>
         <div class="progress" style="height:10px">
-            <div class="progress-bar" style="width: 40%;"></div>
+            <div class="progress-bar bg-danger" style="width: 40%;"></div>
         </div>
         <br>
         <div class="progress" style="height: 20px;">
-            <div class="progress-bar" style="width: 50%;"></div>
+            <div class="progress-bar bg-dark" style="width: 50%;"></div>
         </div>
         <br>
         <div class="progress" style="height: 30px;">
-            <div class="progress-bar" style="width: 60%;"></div>
+            <div class="progress-bar bg-warning" style="width: 60%;"></div>
         </div>
 
     </div>
