--- a/Growing-spinner.html
+++ b/Growing-spinner.html
@@ -12,7 +12,7 @@
 <div class="container mt-3">
 <h2>Growing Spinners</h2>
 <code> .spinner-grow</code>
-<div class="spinner-grow text-muted"></div>
+<div class="spinner-grow spinner-grow-sm text-muted"></div>
 <div class="spinner-grow text-primary"></div>
   <div class="spinner-grow text-success"></div>
   <div class="spinner-grow text-info"></div>
