--- a/basic-list-group.html
+++ b/basic-list-group.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Basic need group</h2>
     <ul class="list-group">
-        <li class="list-group-item">First item</li>
+        <li class="list-group-item active">First item</li>
         <li class="list-group-item">Second item</li>
         <li  class="list-group-item" >Third item</li>
     </ul>
