--- a/Cards.html
+++ b/Cards.html
@@ -15,6 +15,26 @@
            <div class="card-footer">Footer</div>
         </div>
     </div>
-    
+
+    <div class="container mt-3">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Card title</h4>
+                <p class="card-text">Some example are here</p>
+                <a href="#" class="card-link">Card linnk</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="card" style="width: 400px;">
+            <img src="card-img-top" src="c:\Users\md.habibur rahman\Pictures\Capture.PNG" alt="Card img">
+            <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">Some example text.</p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
